Added readRecord method and check for isRecord. See dev branch for Java15+ unit tests.